# NeuralNetwork

./: CMakeLists.txt  README.md
miscellaneous/AI Backups and Data/: AI performance.xlsx
miscellaneous/ANSIEscapeCodes/: ANSIEscapeCodes.h
miscellaneous/ImGUI-SFML/: imgui-SFML.cpp
src/: main.cpp
src/NeuralNetworkingLibrary/: include.h
src/NeuralNetworkingLibrary/GUI/: GUI.cpp  GUI.h
src/NeuralNetworkingLibrary/GUI/Addons/DrawingApplication/: DrawingApplication.h
src/NeuralNetworkingLibrary/GUI/Addons/NetworkViewer/: NetworkViewer.h
src/NeuralNetworkingLibrary/ImageList/: ImageList.cpp  ImageList.h
src/NeuralNetworkingLibrary/ImageList/Image/: Image.cpp  Image.h
src/NeuralNetworkingLibrary/NetworkController/: NetworkController.cpp  NetworkController.h
src/NeuralNetworkingLibrary/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
src/NeuralNetworkingLibrary/NeuralNetwork/Layer/: Layer.cpp
src/NeuralNetworkingLibrary/NeuralNetwork/Neuron/: Neuron.cpp
